--- a/src/styles/partials/_media.scss
+++ b/src/styles/partials/_media.scss
@@ -75,6 +75,48 @@
 		padding-top: 110px;
 	}
 
+/* nav styles for sticky scroll header */
+
+.main-offcanvas {
+	right: 0;
+}
+
+.animated {
+	animation-duration: .5s;
+	animation-fill-mode: both;
+}
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.animated.slideDown {
+  animation-name: slideDown;
+}
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(0);
+  }
+
+  100% {
+    transform: translateY(-100%);
+  }
+}
+
+.animated.slideUp {
+  animation-name: slideUp;
+}
+
+/* end nav styles for sticky scroll header */
+
+
 	.nav {
 		padding: $base-spacing-lg 0 $base-spacing 0;
 
